--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,14 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:Rn9+sp6hvfaCHXjdHmzaQu5SZJ05rfU8hN2vSbiL4fo=
 APP_DEBUG=true
 APP_URL=http://localhost
+AUTH_URL=https://api-satusehat.kemkes.go.id
+SATUSEHAT_API_BASE_URL=https://api-satusehat.kemkes.go.id/fhir-r4/v1
+SATUSEHAT_MSI_URL=https://api-satusehat.kemkes.go.id/masterdata
+
+SATUSEHAT_CLIENT_ID=
+SATUSEHAT_CLIENT_SECRET=
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
